[package]
name = "alnilam"
version = "0.0.1"
description = "Discord Bot"
repository = "https://github.com/TribuFu/Alnilam"
authors = ["TribuFu <contact@tribufu.com>"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
publish = true

exclude = [
    ".cargo/",
    ".github/",
    ".vscode/",
    "Documentation/",
    ".editorconfig",
    ".gitattributes",
    "*.code-workspace",
    "Bootstrap.ps1",
    "Bootstrap.sh",
]

[lib]
name="Alnilam"
crate-type = ["rlib"]
path = "Source/Alnilam.rs"

[[bin]]
name="Alnilam"
path = "Source/Main.rs"
doc = false

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
