[package]
name = "alnilam"
version = "0.0.2"
description = "Alnilam Engine"
repository = "https://github.com/TribuFu/Alnilam"
authors = ["TribuFu <contact@tribufu.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"
publish = true

exclude = [
    ".cargo/",
    ".github/",
    ".vscode/",
    "Documentation/",
    ".editorconfig",
    ".gitattributes",
    "*.code-workspace",
    "Bootstrap.ps1",
    "Bootstrap.sh",
]

[lib]
name="Alnilam"
crate-type = ["rlib"]
path = "Source/Engine.rs"

[dependencies]
